# 3d_engine

./: CMakeLists.txt  CMakeSettings.json  README.md
data/: editor_controls.txt  game_controls.txt  grid.blend  grid.blend1
data/anim/: character.anim  dancing_vampire.anim  vampire.anim
data/levels/: .level  animation_test.level  animation_test2.level  cerberus_test.level  collider_test.level  collision_test.level  culling_test.level  gameplay_test.level  gameplay_test.level.0.tga  gameplay_test.level.1.tga  gameplay_test.level.10.tga  gameplay_test.level.11.tga  gameplay_test.level.12.tga  gameplay_test.level.13.tga  gameplay_test.level.14.tga  gameplay_test.level.15.tga  gameplay_test.level.16.tga  gameplay_test.level.17.tga  gameplay_test.level.18.tga  gameplay_test.level.19.tga  gameplay_test.level.2.tga  gameplay_test.level.20.tga  gameplay_test.level.21.tga  gameplay_test.level.22.tga  gameplay_test.level.23.tga  gameplay_test.level.24.tga  gameplay_test.level.25.tga  gameplay_test.level.26.tga  gameplay_test.level.27.tga  gameplay_test.level.28.tga  gameplay_test.level.29.tga  gameplay_test.level.3.tga  gameplay_test.level.30.tga  gameplay_test.level.31.tga  gameplay_test.level.4.tga  gameplay_test.level.5.tga  gameplay_test.level.6.tga  gameplay_test.level.7.tga  gameplay_test.level.8.tga  gameplay_test.level.9.tga  (+39 more)
data/mesh/: Aset_wood_root_M_rkswd_LOD0.mesh  II_wire.mesh  L_wire.mesh  Rock_siEoZ_4K_3d_ms.mesh  SM_Rock_01.mesh  T_wire.mesh  WoodenCrate.mesh  X_wire.mesh  arrow.mesh  base_step.mesh  base_step_corner.mesh  block_arrow.mesh  capsule.mesh  cerberus.mesh  character.mesh  cube.mesh  dancing_vampire.mesh  fern.mesh  gazebo.mesh  generator.mesh  generator1.mesh  grid.mesh  i_wire.mesh  lamp.mesh  o_wire.mesh  pillar1.mesh  quad.mesh  ring.mesh  seaweed.mesh  siEoZ_LOD0.mesh  sphere.mesh  step1.mesh  step2.mesh  step3.mesh  step_corner1.mesh  teapot.mesh  terrain.mesh  test.mesh  testball.mesh  tile1.mesh  (+5 more)
data/models/: I_wire.blend  L_wire.blend  SM_Rock_01.blend  SM_Rock_01.blend1  SM_Rock_01.mtl  T_wire.blend  WoodenCrate.mesh  WoodenCrate.mtl  X_wire.blend  absorber.blend  absorber.blend1  absorber1.blend  absorber1.blend1  absorber2.blend  absorber2.blend1  absorber3.blend  absorber3.blend1  arrow.blend  arrow.mesh  base_step.blend  base_step_corner.blend  block_arrow.blend  block_arrow.mesh  cable_connector.blend  cable_connector.blend1  cable_connector.glb  capsule.mtl  cube.blend  cube.mesh  cube.mtl  generator.blend  generator.blend1  generator.fbx  generator.glb  generator.mtl  generator1.blend  generator1.blend1  generator1.dae  generator1.fbx  generator1.glb  (+42 more)
data/models/exports (glb)/: absorber.glb  absorber1.glb  absorber2.glb  absorber3.glb  pillar4.glb  teleporter.glb
data/screenshots/: 25-12-2022-19-40-52.tga
data/shaders/: blur_upsample.gl  debug.gl  debug.glsl  depth_only.gl  diffuse_convolution.gl  diffuse_convolution.glsl  directional.gl  directional.glsl  distance_blur.gl  downsample.gl  gaussian_blur.gl  generate_brdf_lut.gl  generate_brdf_lut.glsl  geometry.gl  jfa_to_distance.gl  jfa_to_distance.glsl  jump_flood.gl  null.gl  null.glsl  null_anim.gl  plane_projection.gl  plane_projection.glsl  point.gl  post.gl  post.glsl  seaweed.gl  skybox.gl  skybox.glsl  specular_convolution.gl  specular_convolution.glsl  unified.gl  unified.glsl  unified_anim.gl  vegetation.gl  volumetric_integration.gl  volumetric_integration.glsl  volumetric_raymarch.gl  volumetric_raymarch.glsl  water.gl  water.glsl  (+2 more)
data/shaders/lib/: blinn.gl  blinn.glsl  bone_ubo.gl  constants.gl  constants.glsl  lights_ubo.glsl  noise.gl  noise.glsl  pbr.gl  pbr.glsl  pbr_helpers.gl  pbr_helpers.glsl  shadow_ubo.gl  shadows.gl  shadows.glsl  shared.gl  utilities.gl  utilities.glsl  vegetation.gl  volumetrics.gl  volumetrics.glsl  waves.glsl
data/shaders/lightmapper/: downsample.glsl  hemisphere.glsl
data/textures/: character_S.tga  skybox.blend  skybox.blend1  waterFoam.dds  waterNM1.dds  waterNM2.dds  waterNoise.dds
data/textures/circus_backstage/: nz.hdr  px.hdr  py.hdr
data/textures/simple_skybox/: 0002.hdr  nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  skybox.blend  skybox.blend1
data/textures/sky_skybox/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
data/textures/sponza-pbr/: Background_Albedo.tga  Lion_Albedo.tga  Sponza_Arch_diffuse.tga  Sponza_Bricks_a_Albedo.tga  Sponza_Ceiling_diffuse.tga  Sponza_Column_a_diffuse.tga  Sponza_Column_b_diffuse.tga  Sponza_Column_c_diffuse.tga  Sponza_Curtain_Blue_diffuse.tga  Sponza_Curtain_Green_diffuse.tga  Sponza_Curtain_Red_diffuse.tga  Sponza_Details_diffuse.tga  Sponza_Fabric_Blue_diffuse.tga  Sponza_Fabric_Green_diffuse.tga  Sponza_Fabric_Red_diffuse.tga  Sponza_FlagPole_diffuse.tga  Sponza_Floor_diffuse.tga  Sponza_Roof_diffuse.tga  VaseRound_diffuse.tga  Vase_diffuse.tga
data/textures/stonewall_skybox/: py.hdr
include/: assets.hpp  controls.hpp  editor.hpp  entities.hpp  game_behaviour.hpp  globals.hpp  graphics.hpp  level.hpp  lightmapper.hpp  objloader.hpp  physics.hpp  primitives.hpp  renderer.hpp  scoped_enum_flag.hpp  serialize.hpp  shader.hpp  texture.hpp  threadpool.hpp  utilities.hpp
include/camera/: core.hpp  globals.hpp
include/controls/: behaviour.hpp  core.hpp  globals.hpp
include/shader/: core.hpp  globals.hpp
include/utilities/: math.hpp  strings.hpp
models/: WoodenCrate.mtl  capsule.mtl
shaders/: base.frag  base.vert  geom.frag  geom.vert
src/: assets.cpp  controls.cpp  editor.cpp  entities.cpp  game_behaviour.cpp  graphics.cpp  level.cpp  lightmapper.cpp  main.cpp  objloader.cpp  physics.cpp  primitives.cpp  renderer.cpp  serialize.cpp  shader.cpp  texture.cpp  threadpool.cpp  utilities.cpp
src/camera/: core.cpp  globals.cpp
src/controls/: behaviour.cpp  core.cpp  globals.cpp
src/shader/: core.cpp  globals.cpp
src/utilities/: math.cpp  strings.cpp
textures/: brick_diffuse.dds
